<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/blanco"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pc1.sqlite.Activity2Menu">

    <TextView
        android:text="@string/tituloMenu"
        android:textColor="@color/negro"
        android:layout_gravity="center"
        android:textSize="17dp"
        android:elevation="2dp"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnIngresar"
        android:text="@string/ingresar"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnInformacion"
        android:text="@string/verInfo"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnActualizar"
        android:text="@string/actualizar"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnEliminar"
        android:text="@string/eliminar"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
