<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/gris"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pc1.sqlite.RegistroUsuario">

    <TextView
        android:text="@string/registro"
        android:gravity="center"
        android:textColor="@color/negro"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="17dp"
                        android:text="@string/nombresRegistro"
                        android:textColor="@color/negro"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/apellidosRegistro"
                        android:textColor="@color/negro"
                        android:textSize="15sp"
                        android:layout_marginTop="25dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/nickname"
                        android:textColor="@color/negro"
                        android:textSize="15sp"
                        android:layout_marginTop="23dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/repetirNickname"
                        android:textColor="@color/negro"
                        android:textSize="15sp"
                        android:layout_marginTop="23dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/contraseniaRegistro"
                        android:textColor="@color/negro"
                        android:textSize="15sp"
                        android:layout_marginTop="27dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/repetirContrasenia"
                        android:textColor="@color/negro"
                        android:textSize="15sp"
                        android:layout_marginTop="27dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etNombresRegistro"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/etApellidosRegistro"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/etEmailRegistro"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/etRepetirEmailRegistro"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/etPasswordRegistro"
                        android:inputType="numberPassword"
                        android:maxLength="5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:maxLength="5"
                        android:id="@+id/etRepetirPasswordRegistro"
                        android:inputType="numberPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/tvResultadoRegistro"
                android:gravity="center"
                android:textSize="12dp"
                android:textColor="@color/rojo"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnRegistro_Registro"
                    android:onClick="onClick"
                    android:text="@string/registrarseRegistro"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btnCancelar_Registro"
                    android:text="@string/cancelarRegistro"
                    android:onClick="onClick"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
