<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/blanco"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pc1.sqlite.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/nickname"
                android:textColor="@color/negro"
                android:textSize="12dp"
                android:elevation="2dp"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/contrasenia"
                android:textColor="@color/negro"
                android:textSize="12dp"
                android:elevation="2dp"
                android:padding="5dp"
                android:layout_marginTop="23dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etUsuarioMainA"
                android:elevation="2dp"
                android:textColor="@color/negro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etContraseniaMainA"
                android:elevation="2dp"
                android:inputType="numberPassword"
                android:maxLength="5"
                android:textColor="@color/negro"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvResultadoLogin"
                android:textColor="@color/rojo"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:onClick="onClick"
        android:id="@+id/btnEntrarMainA"
        android:layout_gravity="center"
        android:text="@string/entrar"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:elevation="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:onClick="onClick"
        android:id="@+id/btnRegistroMainA"
        android:layout_gravity="center"
        android:text="@string/registro"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:elevation="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>
